# example_package_sean

./: MANIFEST.in  README.md  pyproject.toml
.github/workflows/: pub_pypi.yml  test.yml
src/example_package_sean/: __init__.py
