[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example_package_sean"
version = "0.0.1"
authors = [
  { name="Sean Park", email="saehie.park@gmail.com" },
]
maintainers = [
  { name="Sean Park", email="saehie.park@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache2 License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/seanshpark/example_package_sean"
"Bug Reports" = "https://github.com/seanshpark/example_package_sean/issues"
